Update .gitmodules to use new CF URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "CommunityFramework"]
+[submodule "communityframework"]
 	path = communityframework
-	url = https://github.com/Emmaker/Community-Framework.git
-	branch = master
-[submodule "Community-Framework"]
-	path = Community-Framework
-	url = https://github.com/Emmaker/Community-Framework
+	url = https://github.com/Emmaker/communityframework
