--- a/cosmicexpanse/interface/windowconfig/ce_inventorstable.config
+++ b/cosmicexpanse/interface/windowconfig/ce_inventorstable.config
@@ -189,8 +189,20 @@
     },
     "lblMatTab" : {
       "type" : "image",
+      "file" : "/objects/space/solarpanel/solarpanelicon.png",
+      "position" : [11, 265],
+      "zlevel" : 3
+    },
+    "lblBedTab" : {
+      "type" : "image",
+      "file" : "/celestial/system/ships/playership.png",
+      "position" : [11, 245],
+      "zlevel" : 3
+    },
+    "lblDyeTab" : {
+      "type" : "image",
       "file" : "/interface/crafting/tabicon_mechanics.png",
-      "position" : [13, 267],
+      "position" : [13, 227],
       "zlevel" : 3
     },
     "categories" : {
@@ -208,6 +220,22 @@
         },
         {
           "position" : [6, 265],
+          "baseImage" : "/interface/crafting/unselectedTab.png",
+          "baseImageChecked" : "/interface/crafting/ce_selectedTab.png",
+          "data" : {
+            "filter" : [ "ce_machinery" ]
+          }
+        },
+        {
+          "position" : [6, 245],
+          "baseImage" : "/interface/crafting/unselectedTab.png",
+          "baseImageChecked" : "/interface/crafting/ce_selectedTab.png",
+          "data" : {
+            "filter" : [ "ce_ship" ]
+          }
+        },
+        {
+          "position" : [6, 225],
           "baseImage" : "/interface/crafting/unselectedTab.png",
           "baseImageChecked" : "/interface/crafting/ce_selectedTab.png",
           "data" : {
