Continue scripted quest log

--- a/cosmicexpanse/interface/scripted/mmupgrade/mmupgradegui.config
+++ b/cosmicexpanse/interface/scripted/mmupgrade/mmupgradegui.config
@@ -28,7 +28,7 @@
 
     "questTabs" : {
       "type" : "radioGroup",
-      "callback" : "questCategory",
+      "callback" : "populateQuests",
       "toggleMode" : false,
       "buttons" : [
         {
@@ -39,7 +39,7 @@
           "baseImageChecked" : "/interface/scripted/cequestlog/buttonCategory.png:default",
           "pressedOffset" : [0, 0],
           "text" : "Active",
-          "data" : "full"
+          "data" : "active"
         },
         {
           "position" : [87, 268],
@@ -48,13 +48,109 @@
           "baseImageChecked" : "/interface/scripted/cequestlog/buttonCategory.png:default",
           "pressedOffset" : [0, 0],
           "text" : "Completed",
-          "data" : "compact"
+          "data" : "completed"
         }
       ]
+    },
+
+    "scrollAreaQuests" : {
+      "type" : "scrollArea",
+      "rect" : [5, 6, 178, 267],
+      "children" : {
+        "listQuests" : {
+          "type" : "list",
+          "callback" : "selectQuest",
+          "schema" : {
+            "selectedBG" : "/interface/scripted/cequestlog/questBackground.png:selected",
+            "unselectedBG" : "/interface/scripted/cequestlog/questBackground.png:default",
+            "spacing" : [0, 1],
+            "memberSize" : [163, 16],
+            "listTemplate" : {
+              "background" : {
+                "type" : "image",
+                "file" : "/interface/scripted/cequestlog/questBackground.png:default",
+                "position" : [0, 0],
+                "zlevel" : -1
+              },
+              "divider" : {
+                "type" : "image",
+                "file" : "/assetmissing.png",
+                "position" : [0, 0],
+                "zlevel" : -1
+              },
+              "name" : {
+                "type" : "label",
+                "position" : [15, 3]
+              }
+            }
+          }
+        }
+      }
+    },
+    "scrollAreaDesc" : {
+      "type" : "scrollArea",
+      "rect" : [185, 146, 356, 265],
+      "children" : {
+
+      }
+    },
+    "scrollAreaStages" : {
+      "type" : "scrollArea",
+      "rect" : [185, 22, 356, 141],
+      "children" : {
+
+      }
+    },
+
+    "trackButton" : {
+      "type" : "button",
+      "caption" : "Track Quest",
+      "base" : "/interface/scripted/cequestlog/buttonTracking.png:default",
+      "hover" : "/interface/scripted/cequestlog/buttonTracking.png:hover",
+      "pressed" : "/interface/scripted/cequestlog/buttonTracking.png:pressed",
+      "position" : [182, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "toggleTracking",
+      "zlevel" : 1
+    },
+    "trackButtonDisabled" : {
+      "type" : "button",
+      "caption" : "Track Quest",
+      "base" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "hover" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "pressed" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "position" : [182, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "toggleTracking",
+      "zlevel" : 0
+    },
+    "abandonButton" : {
+      "type" : "button",
+      "caption" : "Abandon",
+      "textAlign" : "center",
+      "base" : "/interface/scripted/cequestlog/buttonAbandon.png:default",
+      "hover" : "/interface/scripted/cequestlog/buttonAbandon.png:hover",
+      "pressed" : "/interface/scripted/cequestlog/buttonAbandon.png:pressed",
+      "position" : [271, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "abandonQuest",
+      "zlevel" : 1
+    },
+    "abandonButtonDisabled" : {
+      "type" : "button",
+      "caption" : "Abandon",
+      "textAlign" : "center",
+      "base" : "/interface/scripted/cequestlog/buttonAbandon.png:disabled",
+      "hover" : "/interface/scripted/cequestlog/buttonAbandon.png:disabled",
+      "pressed" : "/interface/scripted/cequestlog/buttonAbandon.png:disabled",
+      "position" : [271, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "abandonQuest",
+      "zlevel" : 0
     }
   },
 
-  "scriptWidgetCallbacks" : ["questCategory"],
+  "scriptWidgetCallbacks" : [ "populateQuests", "selectQuest", "toggleTracking", "abandonQuest" ],
 
   "scripts" : [ "/interface/scripted/cequestlog/cequestlog.lua" ],
   "scriptDelta" : 1,
