Quest log progress

--- a/cosmicexpanse/interface/scripted/cequestlog/categories.config
+++ b/cosmicexpanse/interface/scripted/cequestlog/categories.config
@@ -3,7 +3,7 @@
     "divider" : "dividers/main.png",
     "quests" : [
       { "id" : "protectorate" },
-      { "id" : "bootship", "alwayShow" : true },
+      { "id" : "bootship", "alwaysShow" : true },
 
       { "id" : "gaterepair" },
       { "id" : "shiprepair" },
@@ -26,12 +26,12 @@
       { "id" : "glitch_mission1" },
       { "id" : "glitch_mission2" },
 
-      { "id" : "destroyruin" }
+      { "id" : "destroyruin", "alwaysShow" : true }
     ]
   },
 
   "tech" : {
-    "divider" : "dividers/example.png",
+    "divider" : "dividers/tech.png",
     "quests" : [
       { "id" : "techscientist1" },
       { "id" : "techscientist2" },
