--- a/cosmicexpanse/interface/scripted/mmupgrade/mmupgradegui.config
+++ b/cosmicexpanse/interface/scripted/mmupgrade/mmupgradegui.config
@@ -78,6 +78,11 @@
                 "position" : [0, 0],
                 "zlevel" : -1
               },
+              "indicator" : {
+                "type" : "image",
+                "file" : "/assetmissing.png",
+                "position" : [2, 0]
+              },
               "name" : {
                 "type" : "label",
                 "position" : [15, 3]
@@ -102,6 +107,28 @@
       }
     },
 
+    "acceptButton" : {
+      "type" : "button",
+      "caption" : "Accept Quest",
+      "base" : "/interface/scripted/cequestlog/buttonTracking.png:default",
+      "hover" : "/interface/scripted/cequestlog/buttonTracking.png:hover",
+      "pressed" : "/interface/scripted/cequestlog/buttonTracking.png:pressed",
+      "position" : [182, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "acceptQuest",
+      "zlevel" : 1
+    },
+    "acceptButtonDisabled" : {
+      "type" : "button",
+      "caption" : "Accept Quest",
+      "base" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "hover" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "pressed" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
+      "position" : [182, 3],
+      "pressedOffset" : [0, 0],
+      "callback" : "null",
+      "zlevel" : 1
+    },
     "trackButton" : {
       "type" : "button",
       "caption" : "Track Quest",
@@ -121,7 +148,7 @@
       "pressed" : "/interface/scripted/cequestlog/buttonTracking.png:disabled",
       "position" : [182, 3],
       "pressedOffset" : [0, 0],
-      "callback" : "toggleTracking",
+      "callback" : "null",
       "zlevel" : 0
     },
     "abandonButton" : {
@@ -145,12 +172,12 @@
       "pressed" : "/interface/scripted/cequestlog/buttonAbandon.png:disabled",
       "position" : [271, 3],
       "pressedOffset" : [0, 0],
-      "callback" : "abandonQuest",
+      "callback" : "null",
       "zlevel" : 0
     }
   },
 
-  "scriptWidgetCallbacks" : [ "populateQuests", "selectQuest", "toggleTracking", "abandonQuest" ],
+  "scriptWidgetCallbacks" : [ "populateQuests", "selectQuest", "acceptQuest", "abandonQuest", "toggleTracking" ],
 
   "scripts" : [ "/interface/scripted/cequestlog/cequestlog.lua" ],
   "scriptDelta" : 1,
